--- a/Software_Pim_3_Semestre.csproj
+++ b/Software_Pim_3_Semestre.csproj
@@ -46,11 +46,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm_CadastroUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_CadastroUsuario.Designer.cs">
+      <DependentUpon>Frm_CadastroUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ConsultaHospede.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ConsultaHospede.Designer.cs">
+      <DependentUpon>Frm_ConsultaHospede.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ConsultaPagamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ConsultaPagamento.Designer.cs">
+      <DependentUpon>Frm_ConsultaPagamento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_CadastroHospede.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_CadastroHospede.Designer.cs">
       <DependentUpon>Frm_CadastroHospede.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_CadastroQuarto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_CadastroQuarto.Designer.cs">
+      <DependentUpon>Frm_CadastroQuarto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ConsultaQuarto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ConsultaQuarto.Designer.cs">
+      <DependentUpon>Frm_ConsultaQuarto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ConsultaReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ConsultaReserva.Designer.cs">
+      <DependentUpon>Frm_ConsultaReserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_FazerReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_FazerReserva.Designer.cs">
+      <DependentUpon>Frm_FazerReserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_Pagamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Pagamento.Designer.cs">
+      <DependentUpon>Frm_Pagamento.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Principal.cs">
       <SubType>Form</SubType>
@@ -64,16 +112,50 @@
     <Compile Include="Frm_Login.Designer.cs">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_CadastroTipoQuarto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_CadastroTipoQuarto.Designer.cs">
+      <DependentUpon>Frm_CadastroTipoQuarto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Hospede.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Frm_CadastroHospede.resx">
       <DependentUpon>Frm_CadastroHospede.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_CadastroQuarto.resx">
+      <DependentUpon>Frm_CadastroQuarto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_CadastroUsuario.resx">
+      <DependentUpon>Frm_CadastroUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ConsultaHospede.resx">
+      <DependentUpon>Frm_ConsultaHospede.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ConsultaPagamento.resx">
+      <DependentUpon>Frm_ConsultaPagamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ConsultaQuarto.resx">
+      <DependentUpon>Frm_ConsultaQuarto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ConsultaReserva.resx">
+      <DependentUpon>Frm_ConsultaReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_FazerReserva.resx">
+      <DependentUpon>Frm_FazerReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Pagamento.resx">
+      <DependentUpon>Frm_Pagamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Login.resx">
       <DependentUpon>Frm_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_CadastroTipoQuarto.resx">
+      <DependentUpon>Frm_CadastroTipoQuarto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
