[BACK/FRONT] Criação Classe Usuário e Form Cadastro Usuário
Criação classe usu;ario Formulário funcionando.

--- a/Software_Pim_3_Semestre.csproj
+++ b/Software_Pim_3_Semestre.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Quarto.cs" />
     <Compile Include="Reserva.cs" />
     <Compile Include="TipoQuarto.cs" />
+    <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="Frm_CadastroHospede.resx">
       <DependentUpon>Frm_CadastroHospede.cs</DependentUpon>
     </EmbeddedResource>
